tests/errmsgs/tstaticexprnotype.nim
discard """
errormsg: "expression '"
"""

# error message as a newline, and therefore it can't matched in errormsg

let x = static: discard
